--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+
+    <color name="yellow_deep">#b8860b</color>
+    <color name="gray">#666666</color>
+
+    <color name="blue_light">#FF03DAC5</color>
 </resources>
