完成多語系切換功能、修改語言設定整體UI、新增最新消息內頁功能、新增遊憩景點內頁功能、內頁導航功能、新增icon

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,18 +6,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/white">
+    android:background="@color/black">
     <!--Tab+內容-->
     <com.ci.v1_ci_view.ui.layout.CILinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <com.ci.v1_ci_view.ui.toolbar.CIToolbar
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:title_text="首頁"
-            android:background="@color/blue_light"
-            android:visibility="gone"/>
         <!--tab-->
         <com.google.android.material.tabs.TabLayout
             style="@style/TabLayout"
@@ -28,17 +22,19 @@
             <com.google.android.material.tabs.TabItem
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="遊憩景點" />
+                android:text="@string/n_attractions"/>
             <!--最新消息-->
             <com.google.android.material.tabs.TabItem
+                android:id="@+id/tab_news"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="最新消息" />
+                android:text="@string/n_news"/>
             <!--設定-->
             <com.google.android.material.tabs.TabItem
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="設定" />
+                android:text="@string/n_setting"/>
+
         </com.google.android.material.tabs.TabLayout>
         <!--內容-->
         <com.ci.v1_ci_view.ui.layout.CIFrameLayout
