--- a/app/src/main/res/layout/activity_webview.xml
+++ b/app/src/main/res/layout/activity_webview.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/black">
-    <!--toolbar+內容-->
+    <!--toolbar+webview-->
     <com.ci.v1_ci_view.ui.layout.CILinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -17,15 +17,16 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:title_text="@string/n_language_setting"
-            app:showRightButton="false" />
-
-        <!--資料列表-->
-        <com.ci.v1_ci_view.ui.recyclerview.CIRecyclerView
-            android:id="@+id/list_content"
+            app:showLine="true"
+            app:showRightButton="false"/>
+        <!--WebView-->
+        <WebView
+            android:id="@+id/webview"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
     </com.ci.v1_ci_view.ui.layout.CILinearLayout>
+
 
 
 </com.ci.v1_ci_view.ui.layout.CIFrameLayout>
