--- a/app/src/main/res/layout/item_news_list.xml
+++ b/app/src/main/res/layout/item_news_list.xml
@@ -5,21 +5,23 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="@color/black">
+    <!--Title-->
     <com.ci.v1_ci_view.ui.textview.CITextView
-        android:id="@+id/titleTextView"
+        android:id="@+id/text_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/dimens_normal"
+        android:textSize="@dimen/dimens_small"
         android:textColor="@color/white"
         android:maxLines="2"
         android:ellipsize="end"/>
+    <!--內文-->
     <com.ci.v1_ci_view.ui.textview.CITextView
-        android:id="@+id/descriptionTextView"
+        android:id="@+id/text_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/dimens_normal"
+        android:textSize="@dimen/dimens_very_very_small"
         android:textColor="@color/white"
-        android:maxLines="2"
+        android:maxLines="1"
         android:ellipsize="end"/>
     <View
         style="@style/Line"
