--- a/app/src/main/res/layout/activity_attractions_content.xml
+++ b/app/src/main/res/layout/activity_attractions_content.xml
@@ -11,6 +11,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <!--toolbar+內容-->
         <com.ci.v1_ci_view.ui.layout.CILinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -22,6 +23,12 @@
                 android:layout_height="wrap_content"
                 app:title_text="@string/n_attractions"
                 app:showLine="true"/>
+            <!--圖片Banner-->
+            <com.ci.v1_ci_view.ui.banner.CIBannerView
+                android:id="@+id/view_banner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp" />
             <!--Title-->
             <com.ci.v1_ci_view.ui.textview.CITextView
                 android:id="@+id/text_title"
