--- a/app/src/main/res/layout/activity_news_content.xml
+++ b/app/src/main/res/layout/activity_news_content.xml
@@ -11,6 +11,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <!--toolbar+內容-->
         <com.ci.v1_ci_view.ui.layout.CILinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
