--- a/app/src/main/res/layout/item_attractions_list.xml
+++ b/app/src/main/res/layout/item_attractions_list.xml
@@ -5,22 +5,43 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="@color/black">
-    <com.ci.v1_ci_view.ui.textview.CITextView
-        android:id="@+id/text_title"
+    <com.ci.v1_ci_view.ui.layout.CILinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/dimens_small"
-        android:textColor="@color/white"
-        android:maxLines="2"
-        android:ellipsize="end"/>
-    <com.ci.v1_ci_view.ui.textview.CITextView
-        android:id="@+id/text_introduction"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/dimens_very_very_small"
-        android:textColor="@color/white"
-        android:maxLines="1"
-        android:ellipsize="end"/>
+        android:gravity="center"
+        android:orientation="horizontal">
+        <!--景點圖片-->
+        <ImageView
+            android:id="@+id/img_attractions"
+            android:layout_width="80dp"
+            android:layout_height="80dp"/>
+        <!--標題+內文 區塊-->
+        <com.ci.v1_ci_view.ui.layout.CILinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical">
+            <!--標題-->
+            <com.ci.v1_ci_view.ui.textview.CITextView
+                android:id="@+id/text_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/dimens_small"
+                android:textColor="@color/white"
+                android:maxLines="2"
+                android:ellipsize="end"/>
+            <!--內文-->
+            <com.ci.v1_ci_view.ui.textview.CITextView
+                android:id="@+id/text_introduction"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/dimens_very_very_small"
+                android:textColor="@color/white"
+                android:maxLines="1"
+                android:ellipsize="end"/>
+        </com.ci.v1_ci_view.ui.layout.CILinearLayout>
+    </com.ci.v1_ci_view.ui.layout.CILinearLayout>
+    <!--底線-->
     <View
         style="@style/Line"
         android:layout_marginTop="12dp"/>
